shared-business-logics/services/centralized-dashboard/Backend/Java/gateway-services/api-gateway-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: centralized-dashboard
  labels:
    app: api-gateway-service
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: api-gateway-service
  ports:
  - name: http
    port: 8907
    targetPort: 8907
    protocol: TCP
  sessionAffinity: None
